--- a/css/estilos.css
+++ b/css/estilos.css
@@ -42,7 +42,7 @@ ul {
     content: '';
     width: 50%;
     height: 100%;
-    background-color: #6633ff;
+    background-color: #9966ff;
 }
 
 .nav-navbar {
@@ -54,12 +54,12 @@ ul {
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    background-color: #6633ff;
+    background-color: #9966ff;
 }
 
 .nav-icon {
     display: flex;
-    color: #6633ff;
+    color: #9966ff;
 }
 
 .icon-item a,
@@ -76,7 +76,7 @@ ul {
 }
 
 .icon-item a {
-    color: #6633ff;
+    color: #9966ff;
 }
 
 .nav-link-sup {
@@ -106,7 +106,7 @@ ul {
     display: flex;
     width: 100%;
     height: 20%;
-    border-top: 5px solid #6633ff;
+    border-top: 5px solid #9966ff;
 }
 
 .nav-inf ul {
@@ -127,7 +127,7 @@ ul {
 }
 
 .active a {
-    color: #6633ff !important;
+    color: #9966ff !important;
 }
 
 .linea-link {
@@ -135,16 +135,121 @@ ul {
     top: 0;
     width: 100%;
     height: 15px;
-    background-color: #6633ff;
+    background-color: #9966ff;
     position: absolute;
     transform: translateY(-33px);
 }
 
 /* Masthead */
 .masthead {
+    background-color: aliceblue;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.text-masthead {
+    text-align: center;
+}
+
+.text-masthead h3 {
+    margin: 10px;
+}
+
+.btn-masthead {
+    text-align: center;
+}
+
+.btn {
+    color: white;
+    background-color: red;
+    padding: 7px 45px;
+    border-radius: 20px;
+    border: none;
+    cursor: pointer;
+}
+
+.icon-wtsp {
+    display: flex;
     width: 100%;
-    height: 350px;
-    background-color: azure;
+    justify-content: flex-end;
+    align-items: flex-start;
+}
+
+.icon-wtsp img {
+    margin-right: 90px;
+    width: 70px;
+}
+
+.casa {
+    background-color: white;
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    position: relative;
+    overflow: hidden;
+}
+
+.line1,
+.line2 {
+    top: 0;
+    left:0;
+    position: absolute;
+    width: 100%;
+    height: 10px;
+    background-color: red;
+}
+
+.line1 {
+    transform: rotate(10deg) translateX(49.5%);
+}
+
+.line2 {
+    transform: rotate(-10deg) translateX(-49.5%);
+}
+
+.triang1,
+.triang2 {
+    position: absolute;
+    width: 60%;
+    height: 50px;
+    background-color: aliceblue;
+}
+
+.triang1 {
+    top: -35px;
+    left:0;
+    transform: rotate(-10deg) translateX(-10%);
+}
+
+.triang2 {
+    top: -58px;
+    left:0;
+    transform: rotate(10deg) translateX(80%);
+}
+
+.texto-casa {
+    text-align: center;
+    margin-top: 25px;
+}
+
+.texto-casa p:first-child {
+    margin-bottom: 40px;
+}
+
+.texto-casa h3,
+.texto-casa h1,
+.texto-casa h5 {
+    margin: 0;
+}
+
+.texto-casa p {
+    margin-bottom: 0;
+}
+
+.texto-casa p:last-child {
+    margin-top: 0;
+    margin-bottom: 60px;
 }
 
 /* Redes */
@@ -291,6 +396,12 @@ ul {
     .margen,
     .linea-link {
         display: none;
+    }
+}
+
+@media screen and (max-width:750px) {
+    .masthead {
+        grid-template-columns: repeat(1, 1fr);
     }
 }
 
