--- a/css/estilos.css
+++ b/css/estilos.css
@@ -14,7 +14,7 @@ ul {
 .menu-btn {
     cursor: pointer;
     position: absolute;
-    top: 10px;
+    top: 20px;
     right: 30px;
     z-index: 2;
     display: none;
@@ -360,11 +360,18 @@ ul {
     }
     .nav {
         flex-direction: column;
-        height: 50px;
-        background-color: #6633ff;
+        height: 80px;
+        background-color: #9966ff;
     }
     .nav-img {
         margin-left: 30px;
+        width: 100%;
+    }
+    .nav-img::before {
+        display: none;
+    }
+    .nav-img::after {
+        display: none;
     }
     .nav-navbar {
         width: 80%;
