--- a/css/estilos.css
+++ b/css/estilos.css
@@ -142,7 +142,7 @@ ul {
 
 /* Masthead */
 .masthead {
-    background-color: aliceblue;
+    background-color: #ccffff;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
 }
@@ -213,7 +213,7 @@ ul {
     position: absolute;
     width: 60%;
     height: 50px;
-    background-color: aliceblue;
+    background-color: #ccffff;
 }
 
 .triang1 {
@@ -364,7 +364,6 @@ ul {
         background-color: #9966ff;
     }
     .nav-img {
-        margin-left: 30px;
         width: 100%;
     }
     .nav-img::before {
@@ -372,6 +371,9 @@ ul {
     }
     .nav-img::after {
         display: none;
+    }
+    .nav-img img {
+        margin-left: 30px;
     }
     .nav-navbar {
         width: 80%;
