--- a/css/estilos.css
+++ b/css/estilos.css
@@ -383,7 +383,22 @@ ul {
     margin: 0 30px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 50px;
+    column-gap: 50px;
+    padding-bottom: 25px;
+}
+
+.col-graduados {
+    grid-column: 2 / 3;
+}
+
+.col-graduados .col-head-img img:last-child {
+    max-width: 65%;
+}
+
+/* Columna larga */
+.col-graduados-3 {
+    grid-column: 3 / 4;
+    grid-row: 1 / 3;
 }
 
 .col-head {
@@ -437,6 +452,48 @@ ul {
     width: 100%;
 }
 
+.col-content img {
+    max-width: 100%;
+    margin: 15px 0;
+}
+
+.col-content p {
+    margin: 5px 0;
+    font-style: italic;
+}
+
+.col-content-body p {
+    font-style: normal;
+}
+
+.btn-youtube {
+    width: 100%;
+    height: 80px;
+    background-color: #ffffff;
+    margin-top: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.btn-youtube a {
+    display: block;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.btn-youtube img {
+    max-width: 20%;
+}
+
+.detalle-youtube {
+    font-size: 0.9rem;
+    opacity: 0.6;
+    text-align: center;
+}
+
 .col-content-title {
     margin: 30px 0;
 }
@@ -461,6 +518,10 @@ ul {
 }
 
 /* SECCION CONTACTO */
+.text-danger {
+    color: red;
+}
+
 .formulario {
     display: flex;
     justify-content: center;
@@ -487,7 +548,12 @@ ul {
     width: 100%;
     height: 80px;
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.input-area input[type="checkbox"] {
+    flex-direction: row;
 }
 
 .input-area input {
@@ -501,6 +567,11 @@ ul {
     outline: none;
 }
 
+.formulario form button,
+.form-2 form button {
+    float: right;
+}
+
 /* INSCRIPCION */
 .formulario-inscripcion {
     display: flex;
@@ -510,12 +581,12 @@ ul {
 
 .form-1, .form-2 {
     width: 40%;
+    margin-bottom: 20px;
 }
 
 .input-title h4 {
     margin: 0;
     margin-top: 10px;
-    /* padding-left: 20px; */
 }
 
 .input-title p {
@@ -534,9 +605,87 @@ ul {
     margin-left: 5px;
 }
 
-/* .form-2 .input-area .btn {
+/* MODAL */
+.mascara {
+    display: none; 
+    position: fixed; 
+    z-index: 10000000; 
+    left: 0;
+    top: 0;
+    width: 100vw; 
+    height: 100vh; 
+    background-color: rgba(0,0,0,0.8); 
+}
+
+.contenido {
+    position: fixed;
+    left: 10vw;
+    right: 10vw;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: auto;
+    color: black;
+    animation: modal 1s;
+    top: 5vh;
+    max-width: 450px;
+}
+
+.modal-title {
+    display: flex;
+    align-items: center;
+    margin-bottom: 15px;
+}
+
+.modal-title h3 {
+    margin-left: 15px;
+}
+
+.modal-title img {
+    width: 40px;
+}
+
+.modal-body p {
+    margin: 15px 0px;
+}
+
+.modal-footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 15px;
+}
+
+.btn-acept {
+    max-height: 50px;
+    color: white;
+    background-color: red;
+    padding: 7px 45px;
+    border-radius: 20px;
+    border: none;
+    cursor: pointer;
+}
+
+.cerrar {
+    color: #aaaaaa;
+    font-size: 28px;
+    font-weight: bold;
     margin-left: auto;
-} */
+}
+
+.cerrar:hover,
+.cerrar:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+@keyframes modal {
+    0% {
+        transform: translateY(-150%);
+    }
+}
 
 /* Medias querys responsive */
 @media screen and (max-width:950px) {
@@ -606,6 +755,10 @@ ul {
     .graduados {
         grid-template-columns: repeat(2, 1fr);
     }
+    .col-graduados-3 {
+        grid-column: 1 / 2;
+        grid-row: 1 / 3;
+    }
 }
 
 @media screen and (max-width:750px) {
@@ -656,6 +809,23 @@ ul {
     }
     .graduados {
         grid-template-columns: repeat(1, 1fr);
+    }
+    .col-graduados {
+        grid-column: 1 / 2;
+        margin-bottom: 50px;
+    }
+    .col-graduados-3 {
+        grid-column: 1 / 2;
+        grid-row: 4 / 6;
+    }
+    .btn-youtube img {
+        max-width: 10%;
+    }
+    .col {
+        margin-bottom: 50px;
+    }
+    .col:first-child {
+        margin-bottom: 0;
     }
     .formulario-inscripcion {
         flex-direction: column;
