--- a/css/estilos.css
+++ b/css/estilos.css
@@ -687,6 +687,260 @@ ul {
     }
 }
 
+/* SECCION CARRERA */
+.col-carrera-1,
+.col-carrera-2 {
+    width: 50%;
+}
+
+.col-carrera-1 p {
+    margin-left: 30px;
+    opacity: 0.5;
+}
+
+.charla {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    padding-bottom: 50px;
+}
+
+.titulo-charla {
+    width: 100%;
+    text-align: center;
+    text-transform: uppercase;
+    margin-top: 50px;
+    background-color: #9966ff;
+    color: white;
+}
+
+.texto-charla {
+    background-color: #ffffff;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.texto-charla img {
+    max-width: 15%;
+    margin: auto;
+    margin-top: 20px;
+    margin-bottom: 50px;
+}
+
+.col-carrera-2 {
+    display: flex;
+    flex-direction: column;
+}
+
+.col-carrera-2 .cont-carrera {
+    display: flex;
+    flex-direction: column;
+    margin-left: auto;
+    margin-right: 95px;
+}
+
+.cont-carrera-2 {
+    display: flex;
+    justify-content: space-between;
+}
+
+.wtsp img {
+    margin-right: 90px;
+    width: 70px;
+}
+
+.cont-texto h2 {
+    margin: 5px 0;
+}
+
+.cont-texto h2:first-child { 
+    color: #9966ff;
+}
+
+.parrafo1 h2 {
+    margin-bottom: 0;
+    margin-top: 40px;
+}
+
+.parrafo1 h4 {
+    margin: 0;
+    color: #9966ff;
+}
+
+.parrafo2 h3 {
+    margin: 0;
+}
+
+.parrafo2 h3:first-child {
+    margin: 40px 0;
+}
+
+.parrafo2 {
+    margin-bottom: 20px;
+}
+
+.cont-carrera-4 {
+    width: 90%;
+    padding-right: 50px;
+}
+
+.cont4-titulo {
+    background-color: #999999;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.cont4-titulo h3 {
+    text-transform: uppercase;
+    color: white;
+    padding-right: 20px;
+}
+
+.cont4-body {
+    background-color: #ffffff;
+    padding: 30px 0;
+}
+
+.cont4-text {
+    display: flex;
+    align-items: center;
+    opacity: 0.6;
+}
+
+.cont4-text img {
+    width: 30px;
+    margin: 5px 20px;
+}
+
+.division-carrera {
+    width: 100%;
+    height: 50px;
+    background-color: #cc99ff;
+}
+
+/* 
+    CARRERA SECCION SALIDA LABORAL
+*/
+.laboral-carrera {
+    display: flex;
+    padding: 40px;
+    justify-content: center;
+    background-color: rgb(247, 247, 234);
+}
+
+.seccion,
+.seccion2 {
+    width: 50%;
+}
+
+.seccion1 {
+    border-bottom: 15px solid #999999;
+    border-top: 15px solid #999999;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 80px;
+}
+
+.seccion1-titulo {
+    text-transform: uppercase;
+}
+
+.seccion1-linea {
+    width: 100%;
+    border-top: 25px solid #9966ff;
+    margin-top: 15px;
+}
+
+.seccion2 {
+    padding: 0 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #ffffff;
+}
+
+.seccion2-item {
+    display: flex;
+    align-items: center;
+}
+
+.seccion2-item p {
+    margin-left: 10px;
+}
+
+/* CARRERA PLAN DE ESTUDIO */
+.plan-estudio {
+    padding: 0 40px;
+    background-color: rgb(247, 247, 234);
+}
+
+.plan-titulo {
+    width: 100%;
+    height: 100px;
+    background-color: #999999;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.titulo-icono {
+    margin-left: 40px;
+}
+
+.titulo-icono img {
+    width: 70px;
+}
+
+.titulo-texto {
+    display: flex;
+    align-items: center;
+    margin-right: 40px;
+}
+
+.icon img {
+    width: 60px;
+    margin-right: 20px;
+}
+
+.text {
+    color: white;
+}
+
+.text h3 {
+    text-transform: uppercase;
+}
+
+.plan-columnas {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 80px;
+    padding-bottom: 50px;
+}
+
+.plan-columna {
+    border-bottom: 20px solid #999999;
+}
+
+.plan-columna p {
+    padding-left: 10px;
+}
+
+.plan-columna h3 {
+    margin: 0;
+    color: #9966ff;
+    margin-top: 20px;
+    font-size: 1.3rem;
+}
+
+.plan-columna h4 {
+    margin: 0;
+}
+
 /* Medias querys responsive */
 @media screen and (max-width:950px) {
     .menu-btn {
@@ -800,13 +1054,46 @@ ul {
     .formulario form {
         width: 90%;
     }
-}
-
-@media screen and (max-width:650px) {
     .columns {
         grid-template-columns: repeat(1, 1fr);
         width: 100%;
     }
+    /* carrera */
+    .col-carrera-1{
+        width: 100%;
+    }
+    .col-carrera-2 {
+        width: 80%;
+    }
+    .col-carrera-2 .cont-carrera,
+    .wtsp img {
+        margin-right: 0;
+    }
+    .cont-carrera-4 {
+        padding-right: 0;
+        width: 100%;
+    }
+    .laboral-carrera {
+        flex-direction: column;
+    }
+    .seccion, .seccion2 {
+        width: 100%;
+    }
+    .seccion1 {
+        padding: 40px 10px;
+    }
+    .seccion2{
+        padding: 0;
+    }
+    .seccion2-item {
+        margin: 0 10px;
+    }
+    .plan-columnas {
+        gap: 10px;
+    }
+}
+
+@media screen and (max-width:650px) {
     .graduados {
         grid-template-columns: repeat(1, 1fr);
     }
@@ -833,5 +1120,8 @@ ul {
     }
     .form-1, .form-2 {
         width: 80%;
+    }
+    .plan-columnas {
+        grid-template-columns: repeat(1, 1fr);
     }
 }
