--- a/sass/main.css
+++ b/sass/main.css
@@ -343,6 +343,13 @@ ul {
   display: flex;
 }
 
+.imagen {
+  background-image: url("../img/portada.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .col-1 {
   width: 70%;
   display: -webkit-box;
@@ -416,8 +423,10 @@ ul {
 }
 
 .casa {
+  -webkit-clip-path: polygon(50% 0%, 100% 7%, 100% 100%, 0 100%, 0 7%);
+          clip-path: polygon(50% 0%, 100% 7%, 100% 100%, 0 100%, 0 7%);
   background-color: white;
-  width: 70%;
+  width: 260px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -503,7 +512,8 @@ ul {
     max-width: 60%;
   }
   .casa {
-    width: 100%;
+    -webkit-clip-path: polygon(50% 0%, 100% 9%, 100% 100%, 0 100%, 0 9%);
+            clip-path: polygon(50% 0%, 100% 9%, 100% 100%, 0 100%, 0 9%);
   }
   .icon-wtsp img {
     margin-right: 10px;
@@ -528,7 +538,7 @@ ul {
     max-width: 90%;
   }
   .col-2 {
-    width: 70%;
+    width: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
