--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,7 @@ ul {
 
 @import 'header.scss';
 @import 'modal.scss';
+@import 'modal2.scss';
 @import 'masthead.scss';
 @import 'graduados.scss';
 @import 'contacto.scss';
@@ -19,3 +20,5 @@ ul {
 @import 'carrera.scss';
 @import 'footer.scss';
 @import 'cursos.scss';
+@import 'ong.scss';
+@import 'institucional.scss';
