--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -5,11 +5,15 @@
     justify-content: center;
     background-color: #999999;
     color: white;
+    .icon-redes {
+        a {
+            color: white !important;
+            margin: 0 10px;
+            font-size: 2rem;
+        }
+    } 
 }
 
-.icon-redes a {
-    color: #999999 !important;
-}
 
 /* columnas footer */
 .columns {
@@ -38,7 +42,7 @@
 }
 
 .column img {
-    max-width: 50%;
+    width: 240px;
 }
 
 .filas-column {
@@ -101,5 +105,12 @@
         grid-template-columns: repeat(1, 1fr);
         width: 100%;
     }
-
+    .column-icon i {
+        justify-content: center;
+    }
+    .redes {
+        h3 {
+            font-size: 0.8rem;
+        }
+    }
 }
