--- a/sass/main.css
+++ b/sass/main.css
@@ -2282,4 +2282,416 @@ ul {
     max-width: 60%;
   }
 }
+
+.contenedor-asociacion {
+  background-color: #f7f7ea;
+}
+
+.contenedor-asociacion .asociacion-title {
+  position: relative;
+  width: 60%;
+  text-align: end;
+  background-color: #6633ff;
+}
+
+.contenedor-asociacion .asociacion-title h3 {
+  color: white;
+  padding: 15px;
+  text-transform: capitalize;
+  font-size: 1.5rem;
+  margin: 0;
+}
+
+.contenedor-asociacion .asociacion-title::after {
+  content: '';
+  background-image: url("../img/MARCAYUGUETSnavegador.png");
+  background-size: contain;
+  position: absolute;
+  bottom: -80px;
+  left: 50px;
+  width: 250px;
+  height: 120px;
+}
+
+.contenedor-asociacion .asociacion-col {
+  margin: 0 auto;
+  margin-top: 100px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  width: 90%;
+}
+
+.contenedor-asociacion .asociacion-col .asociacion-col-contenido {
+  padding: 0 10px;
+}
+
+.contenedor-asociacion .asociacion-col .asociacion-col-contenido h4 {
+  text-align: justify;
+  font-weight: 400;
+}
+
+.contenedor-asociacion .asociacion-col .asociacion-col-contenido p {
+  text-align: justify;
+  font-weight: 300;
+}
+
+.contenedor-asociacion .asociacion-col .asociacion-col-contenido .contenido-title {
+  background-color: #999999;
+  width: 100%;
+  height: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.contenedor-asociacion .asociacion-col .asociacion-col-contenido .contenido-title h3 {
+  color: white;
+}
+
+.programa-title,
+.puertas-title {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 90%;
+  background-color: #6633ff;
+  height: 150px;
+  margin: 0 auto;
+  margin-top: 50px;
+}
+
+.programa-title h3,
+.puertas-title h3 {
+  color: white;
+  text-transform: uppercase;
+  font-size: 1.2rem;
+  margin-left: 80px;
+}
+
+.programa-title::after,
+.puertas-title::after {
+  content: '';
+  background-image: url("../img/piezas-manos.jpg");
+  background-size: contain;
+  position: absolute;
+  bottom: 0px;
+  right: -75px;
+  width: 150px;
+  height: 150px;
+}
+
+.programa-title::before,
+.puertas-title::before {
+  content: '';
+  position: absolute;
+  bottom: 35px;
+  left: -40px;
+  width: 80px;
+  height: 80px;
+  background-color: white;
+  border-radius: 50%;
+}
+
+.programa-col {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  -ms-grid-rows: (auto)[2];
+      grid-template-rows: repeat(2, auto);
+  gap: 30px;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.programa-col .programa-col-contenido,
+.programa-col .programa-col-contenido-3 {
+  background-color: #f7f7ea;
+  padding: 10px;
+}
+
+.programa-col .programa-col-contenido p,
+.programa-col .programa-col-contenido-3 p {
+  font-weight: 300;
+  line-height: 1.5rem;
+}
+
+.programa-col .programa-col-contenido-3 {
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
+  grid-column: 3 / 4;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1 / 3;
+}
+
+.puertas-title {
+  background-color: #999999;
+}
+
+.puertas-title::after {
+  background-image: url("../img/nenes.png");
+}
+
+.puertas-body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.puertas-body .puertas-col-1 {
+  background-color: #f7f7ea;
+  padding: 10px;
+}
+
+.puertas-body .puertas-col-1 p {
+  font-weight: 300;
+}
+
+.puertas-body .puertas-col-2 {
+  padding: 10px;
+}
+
+.puertas-body .puertas-col-2 p {
+  font-weight: 300;
+}
+
+.prensa-title {
+  width: 100%;
+  text-align: center;
+  background-color: #6633ff;
+}
+
+.prensa-title h2 {
+  margin: 0;
+  padding: 15px;
+  text-transform: uppercase;
+  color: white;
+}
+
+.prensa-body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.prensa-body .prensa-col {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 48%;
+}
+
+.prensa-body .prensa-col .prensa-col-title {
+  width: 100%;
+  background-color: #cccccc;
+}
+
+.prensa-body .prensa-col .prensa-col-title h3 {
+  margin: 0;
+  padding: 20px;
+  color: white;
+  text-align: end;
+  font-style: italic;
+  font-weight: 500;
+}
+
+.prensa-body .prensa-col .prensa-col-body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-left: auto;
+  width: 60%;
+  height: 275px;
+  background-color: #999999;
+}
+
+.prensa-body .prensa-col .prensa-col-body h3 {
+  padding: 20px 25px;
+  color: white;
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  margin: 0;
+}
+
+.prensa-body .prensa-col .prensa-col-body h4 {
+  margin: 0;
+  padding: 20px 25px;
+  text-transform: uppercase;
+  font-size: 1.2rem;
+}
+
+.prensa-body .prensa-col .prensa-col-body a {
+  font-size: 1.2rem;
+  font-style: italic;
+  font-weight: 500;
+  color: white;
+  background-color: #cccccc;
+  padding: 10px 40px;
+  border-radius: 20px;
+  margin: auto 20px 15px auto;
+}
+
+.btn-subir {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 90%;
+  height: 100px;
+  margin: 0 auto;
+}
+
+.btn-subir a {
+  margin-left: auto;
+  -webkit-clip-path: polygon(100% 0%, 100% 100%, 10% 100%, 0% 50%, 10% 0%);
+          clip-path: polygon(100% 0%, 100% 100%, 10% 100%, 0% 50%, 10% 0%);
+  padding: 10px 30px;
+  background-color: #999999;
+  color: white;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 950px) {
+  .contenedor-asociacion .asociacion-title {
+    width: 90%;
+  }
+  .contenedor-asociacion .asociacion-col {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+  }
+  .programa-title,
+  .puertas-title {
+    max-width: 80%;
+  }
+  .programa-col {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    -ms-grid-rows: (auto)[3];
+        grid-template-rows: repeat(3, auto);
+    width: 90%;
+  }
+  .programa-col .programa-col-contenido-3 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1 / 3;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    grid-row: 3 / 4;
+  }
+  .prensa-body .prensa-col .prensa-col-body {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .contenedor-asociacion .asociacion-title {
+    width: 100%;
+  }
+  .contenedor-asociacion .asociacion-title::after {
+    left: 10px;
+    bottom: -110px;
+  }
+  .contenedor-asociacion .asociacion-col {
+    -ms-grid-columns: (1fr)[1];
+        grid-template-columns: repeat(1, 1fr);
+    margin: auto;
+    margin-top: 100px;
+  }
+  .contenedor-asociacion .asociacion-col .asociacion-col-contenido {
+    width: 100%;
+    padding: 0;
+  }
+  .contenedor-asociacion .asociacion-col .asociacion-col-contenido .contenido-title {
+    width: 100%;
+  }
+  .programa-title,
+  .puertas-title {
+    width: 100%;
+    margin: 0;
+    height: 100px;
+  }
+  .programa-title h3,
+  .puertas-title h3 {
+    width: 60%;
+    font-size: 0.8rem;
+    margin: 0 5px;
+  }
+  .programa-title::before,
+  .puertas-title::before {
+    display: none;
+  }
+  .programa-title::after,
+  .puertas-title::after {
+    bottom: 0px;
+    right: -50px;
+    width: 100px;
+    height: 100px;
+  }
+  .programa-col {
+    -ms-grid-columns: (1fr)[1];
+        grid-template-columns: repeat(1, 1fr);
+    -ms-grid-rows: (auto)[5];
+        grid-template-rows: repeat(5, auto);
+    width: 90%;
+  }
+  .programa-col .programa-col-contenido-3 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1 / 2;
+    -ms-grid-row: 5;
+    -ms-grid-row-span: 1;
+    grid-row: 5 / 6;
+  }
+  .puertas-body {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .prensa-body {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .prensa-body .prensa-col {
+    width: 100%;
+  }
+  .prensa-body .prensa-col .prensa-col-body {
+    width: 100%;
+  }
+}
 /*# sourceMappingURL=main.css.map */
