--- a/sass/main.css
+++ b/sass/main.css
@@ -1444,8 +1444,18 @@ ul {
   margin-top: 50px;
 }
 
+.carrera-testimonios-body .col-testimonios {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 .carrera-testimonios-body .col-testimonios video {
   max-width: 100%;
+  height: 200px;
 }
 
 @media screen and (max-width: 750px) {
@@ -1454,9 +1464,9 @@ ul {
         grid-template-columns: repeat(1, 350px);
     gap: 20px;
   }
-}
-
-@media screen and (max-width: 750px) {
+  .carrera-testimonios-body .col-testimonios video {
+    height: auto;
+  }
   /* carrera */
   .col-carrera-1 {
     width: 100%;
@@ -1520,7 +1530,7 @@ ul {
     padding: 0;
   }
   .plan-estudio .plan-titulo {
-    padding: 0 10px;
+    padding: 0;
   }
   .plan-estudio .plan-titulo .titulo-icono {
     margin-left: 5px;
